# tomatoGuide

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT_READY.md  GITHUB_DEPLOYMENT_INSTRUCTIONS.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READY.md  README.md  RESPONSIVENESS_FIXES.md  brain.py  collaboration.py  config.py  focus_detector.py  logger.py  main.py  push-to-github.ps1  pyproject.toml  report_manager.py  requirements.txt  setup.sh  test_startup.py  verify_responsiveness.py
cv-focus-guard-ai-pomodoro/: .gitignore  COLLABORATION_QUICK_START.md  DEVELOPMENT_LOG.md  FEATURES.md  GOOGLE_DRIVE_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SETUP_GUIDE.md  TEACHER_VERIFICATION_GUIDE.md  bluetooth_accountability.py  collaboration.py  config.py  gdrive_helper.py  main.py  verify_report.py
cv-focus-guard-ai-pomodoro/tests/: auto_smoke_test.py  run_tests.py
tests/: run_tests.py
